# fast-api-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 8505bf970827_initial_schema.py
docs/: database-migrations.md
src/: app.py
src/base/auth/: auth_core.py  rbac.py  websocket_auth.py
src/base/config/: database.py  logging_config.py  openapi_config.py  redis.py  redis_cache.py  splunk_handler.py
src/base/core/: dependencies.py  lifespan.py
src/base/decorators/: websocket_endpoint.py
src/base/infra/: database.py  splunk_handler.py
src/base/middleware/: correlation_middleware.py  global_exception_handler_middleware.py  jwt_middleware.py  request_context.py
src/base/models/: role.py  user.py
src/base/routes/: health.py
src/base/utils/: env_utils.py
src/domain/auth/: authorization.py
src/domain/models/: admin_schemas.py  agent_schemas.py  group_schemas.py  models.py  permission_schemas.py
src/domain/models/entities/: __init__.py  agent.py  group.py  group_agent.py  group_membership.py  user.py
src/domain/routes/: admin_routes.py  agent_routes.py  group_routes.py  membership_routes.py  permission_routes.py  rest_routes_example.py  ws_routes_example.py
src/domain/services/: admin_service.py  agent_service.py  example_service.py  group_service.py  membership_service.py  permission_service.py  user_service.py
tests/: conftest.py  test_admin.py  test_agent_service.py  test_authorization.py  test_membership_service.py  test_permission_service.py  test_user_agents.py
