[project]
name = "sidekick-user-management-api"
version = "1.0.0"
description = "FastAPI application with Azure AD RBAC authentication"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128,<1",
    "uvicorn[standard]>=0.40,<1",
    "python-dotenv>=1.2,<2",
    "python-jose[cryptography]>=3.5,<4",
    "requests>=2.32,<3",
    "aiohttp>=3.13,<4",
]
