[project]
name = "sidekick-user-management-api"
version = "1.0.0"
description = "FastAPI application with Azure AD RBAC authentication"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128,<1",
    "uvicorn[standard]>=0.40,<1",
    "python-dotenv>=1.2,<2",
    "python-jose[cryptography]>=3.5,<4",
    "requests>=2.32,<3",
    "aiohttp>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "alembic>=1.18.4",
    "redis[hiredis]>=5.0,<6",
    "redis-entraid>=1.1,<2",
    "azure-identity>=1.19,<2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
